# terragenAI

./: .gitignore  CONTRIBUTING.md  PYPI.md  pyproject.toml  readme.md
.github/: CODEOWNERS
.github/workflows/: auto-version-tag.yml  create-release-tag.yml  develop-source-branch-gate.yml  main-source-branch-gate.yml  publish.yml  unit-tests.yml
src/: __init__.py  client.py  config.py  main.py  memory.py  paths.py
src/models/: module_registry.py
src/services/llm/: base_llm.py  openai.py
src/services/registry/: base.py  terraform_registry.py
src/services/session/: session.py
src/services/vector_store/: base_store.py  faiss_store.py
tests/: test_client.py  test_config.py  test_faiss_service.py  test_main.py  test_memory.py  test_module_registry.py  test_module_registry_service.py  test_openai_service.py  test_paths.py  test_session_service.py  test_vector_store_service.py  test_version_module.py
