[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terragenai"
version = "0.0.5"
description = "A minimal example CLI package."
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Eshika Malgari" }
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/eshika289/terragenAI"
Repository = "https://github.com/eshika289/terragenAI"

[project.scripts]
terragenai = "src.main:run"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
