[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "terragenai"
dynamic = ["version"]
description = "A minimal example CLI package."
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Eshika Malgari" }
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "requests>=2.31.0",
  "python-hcl2>=4.3.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/eshika289/terragenAI"
Repository = "https://github.com/eshika289/terragenAI"

[project.scripts]
terragenai = "src.main:run"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools_scm]
version_file = "src/_version.py"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = '''
^/src/_version\.py$
'''

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["src/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
